[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Zhi Yong <zhiyong9654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
botasaurus = "^4.0.52"
botasaurus-server = "^4.0.53"
dateutils = "^0.6.12"
lxml = "^5.2.2"
regex = "^2024.7.24"
flask = "^3.0.3"
loguru = "^0.7.2"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
